--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,10 @@ jobs:
       - name: Tests
         run: go test -cover ./...
 
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Fix Format
         run: test -z $(go fmt ./...)
