--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
         run: test -z $(go fmt ./...)
 
       - name: Static Check
-        run: statickcheck ./...
+        run: staticcheck ./...
