--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,8 +4,12 @@ on:
 
 jobs:
   tests:
-    name: Deploy
+    name: Build and Push
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: "read"
+      id-token: "write"
 
     steps:
       - name: Check out code
@@ -18,3 +22,19 @@ jobs:
 
       - name: Build app
         run: ./scripts/buildprod.sh
+
+      - id: "auth"
+        uses: "google-github-actions/auth@v2"
+        with:
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v2"
+        with:
+          version: ">= 363.0.0"
+
+      - name: "Use gcloud CLI"
+        run: "gcloud info"
+
+      - name: Build and Push Docker Image
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-463805/notely-ar-repo/notely:latest .
