--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,6 +3,14 @@ on:
     branches: [main]
 
 jobs:
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+
+    # This part
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
   tests:
     name: Deploy
     runs-on: ubuntu-latest
@@ -19,6 +27,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.0"
+
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Build app
         run: ./scripts/buildprod.sh
@@ -38,6 +49,9 @@ jobs:
 
       - name: Build and Push Docker Image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-463805/notely-ar-repo/notely:latest .
+
+      - name: Migrate Up
+        run: ./scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-463805/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-463805 --max-instances=4
