--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,17 +3,18 @@ on:
     branches: [main]
 
 jobs:
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
+  # deploy:
+  #   name: Deploy
+  #   runs-on: ubuntu-latest
 
-    # This part
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  #   # This part
 
   tests:
     name: Deploy
     runs-on: ubuntu-latest
+
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     permissions:
       contents: "read"
